unpackaged/main/default/objects/Nominated_Student__c/Nominated_Student__c.object-meta.xml
<CustomObject>
    <label>Nominated Student</label>
    <nameField>
        <label>Nominated Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nominated Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>