unpackaged/main/default/objects/Nominated_Student__c/fields/Already_a_Lead__c.field-meta.xml
<CustomField>
    <fullName>Already_a_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the student who has been nominated already as a Lead.</inlineHelpText>
    <label>Already a Lead</label>
    <type>Checkbox</type>
</CustomField>