unpackaged/main/default/objects/Nominated_Student__c/fields/Create_Lead__c.field-meta.xml
<CustomField>
    <fullName>Create_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box and save the record to trigger a new lead to be created for this student.</inlineHelpText>
    <label>Create Lead</label>
    <type>Checkbox</type>
</CustomField>