unpackaged/main/default/objects/Nominated_Student__c/fields/Nominator__c.field-meta.xml
<CustomField>
    <fullName>Nominator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Input the name of the person who nominated the student.</inlineHelpText>
    <label>Nominator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Nominated Students</relationshipLabel>
    <relationshipName>Nominated_Students</relationshipName>
    <type>Lookup</type>
</CustomField>