unpackaged/main/default/objects/Nominated_Student__c/fields/Students_Email__c.field-meta.xml
<CustomField>
    <fullName>Students_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <inlineHelpText>This is the email address for the student that was provided by the person who nominated them.</inlineHelpText>
    <label>Student&#39;s Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>