unpackaged/main/default/objects/Nominated_Student__c/fields/Students_Phone__c.field-meta.xml
<CustomField>
    <fullName>Students_Phone__c</fullName>
    <inlineHelpText>This is the phone number for the student whom the nominator nominated.</inlineHelpText>
    <label>Student&#39;s Phone</label>
    <type>Phone</type>
</CustomField>