unpackaged/main/default/objects/Nominated_Student__c/fields/Tell_us_more_about_why_you_wish_to_nomin__c.field-meta.xml
<CustomField>
    <fullName>Tell_us_more_about_why_you_wish_to_nomin__c</fullName>
    <label>Tell us more about why you wish to nomin</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>