unpackaged/main/default/objects/Nominated_Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Nominator__c</columns>
    <columns>Tell_us_more_about_why_you_wish_to_nomin__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>